# atolla

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  biome.jsonc  bunfig.toml  cliff.toml  jellyfin-quick-connect-auth.allium  jellyfin-startup-routing.allium  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vrsn.toml
atolla/: BUILD.bazel  tsconfig.json  tsconfig.src.json  tsconfig.tests.json
atolla/native/: BUILD.bazel  README.md
atolla/native/android/: AndroidManifest.dev.xml  AndroidManifest.prod.xml  AndroidManifest.xml  AtollaCacheImageLoader.kt  AtollaDebugLoggerNativeModuleFactory.kt  AtollaDiskCacheStats.kt  AtollaHapticsBootstrap.kt  AtollaHapticsBootstrapModuleFactory.kt  AtollaImageFallback.kt  AtollaImageLoaderAutoBootstrap.kt  AtollaImageLoaderBootstrapModuleFactory.kt  AtollaImageLoaderRegistration.kt  AtollaLoggerNativeModuleFactory.kt  AtollaNativeTrackPlayerModuleFactory.kt  AtollaNetworkReachabilityNativeModuleFactory.kt  AtollaPlaybackGuards.kt  AtollaPlaybackService.kt  AtollaScrobbleNative.kt  AtollaScrobbleQueue.kt  AtollaStatusBarNativeModuleFactory.kt  AtollaTrackCacheRetention.kt  AtollaTrackPlaybackNativeModuleFactory.kt  AtollaTrackValdiVideoPlayer.kt  AtollaWaveformCodecSelector.kt  AtollaWaveformNativeModuleFactory.kt  AtollaWaveformWorker.kt
atolla/native/ios/: AtollaAuthRedirectGuard.h  AtollaAuthRedirectGuard.m  AtollaBoundedImageDecode.h  AtollaBoundedImageDecode.m  AtollaCacheImageLoader.swift  AtollaDebugLoggerNativeModuleFactory.m  AtollaDiskCacheStats.h  AtollaDiskCacheStats.m  AtollaFloatingView.h  AtollaFloatingView.mm  AtollaHapticsBootstrapModuleFactory.m  AtollaImageFallback.h  AtollaImageFallback.m  AtollaImageLoaderBootstrapModuleFactory.m  AtollaLoggerNativeModuleFactory.m  AtollaNetworkReachabilityNativeModuleFactory.m  AtollaOverlayHost.h  AtollaOverlayHost.mm  AtollaOverlayHostBootstrapModuleFactory.m  AtollaPlaybackGuards.h  AtollaPlaybackGuards.m  AtollaSwipeBackFix.m  AtollaTrackCacheRetention.h  AtollaTrackCacheRetention.m  AtollaTrackPlaybackNativeModuleFactory.m  AtollaWaveformNativeModuleFactory.m  blur_ios_bridge.h  blur_ios_bridge.m  blur_ios_bridge.modulemap  palette_ios_bridge.h  palette_ios_bridge.m  palette_ios_bridge.modulemap  scrobble_ios_bridge.h  scrobble_ios_bridge.m  scrobble_ios_bridge.modulemap  waveform_ios_bridge.h  waveform_ios_bridge.m  waveform_ios_bridge.modulemap
atolla/native/zig/: BUILD.bazel  atolla_algorithms.zig  blur_jni.cpp  image_blur.h  image_blur.zig  palette_extractor.h  palette_extractor.zig  palette_jni.cpp  scrobble_jni.cpp  scrobble_tracker.h  scrobble_tracker.zig  waveform_generator.h  waveform_generator.zig  waveform_jni.cpp  zig_ios_align.bzl
atolla/src/: App.tsx  AuthedApp.tsx  DebugLoggerNative.d.ts  HapticsBootstrap.d.ts  ImageLoaderBootstrap.d.ts  LoggerNative.d.ts  NativeTrackPlayer.d.ts  NetworkReachabilityNative.d.ts  OverlayHostBootstrap.d.ts  StatusBarNative.d.ts  Strings.d.ts  TrackPlaybackNative.d.ts  WaveformNative.d.ts  theme.ts  version.ts
atolla/src/__mocks__/: Albums.ts  Artists.ts  Genres.ts  Playlists.ts
atolla/src/errors/: AuthErrors.ts  Const.ts  PaletteGenerationErrors.ts  TransportErrors.ts
atolla/src/images/: MimeType.ts
atolla/src/models/: Album.ts  App.ts  Artist.ts  CardDetailItem.ts  Color.ts  Genre.ts  Playlist.ts  Search.ts  Track.test.ts  Track.ts
atolla/src/services/: AppServices.test.ts  AppServices.ts  ArtworkPaletteService.test.ts  ArtworkPaletteService.ts  AssetCache.ts  AuthErrors.ts  BackNavRouter.test.ts  BackNavRouter.ts  Connectivity.test.ts  Connectivity.ts  DebugLogger.test.ts  DebugLogger.ts  DeferredPlaybackDownloadCoordinator.test.ts  DeferredPlaybackDownloadCoordinator.ts  DiskWriteWorker.ts  DownloadNativeWorker.ts  DownloadService.test.ts  DownloadService.ts  DownloadSyncService.test.ts  DownloadSyncService.ts  DownloadTrackResolver.test.ts  DownloadTrackResolver.ts  ImageCache.test.ts  ImageCache.ts  ImageSource.test.ts  ImageSource.ts  JellyfinAuthService.test.ts  JellyfinAuthService.ts  Logger.test.ts  Logger.ts  NativeAudioPlaybackEventSync.test.ts  NativeAudioPlaybackEventSync.ts  NavCoordinator.test.ts  NavCoordinator.ts  NetworkStatus.test.ts  NetworkStatus.ts  OfflineDiagnostics.test.ts  OfflineDiagnostics.ts  OnThisDay.test.ts  OnThisDay.ts  (+54 more)
atolla/src/stores/: AppShell.ts  BarColor.ts  Header.test.ts  Header.ts  JellyfinAuthStore.test.ts  JellyfinAuthStore.ts  KeyValueStore.ts  PaletteStore.test.ts  PaletteStore.ts  Playback.test.ts  Playback.ts  Preferences.ts  Queue.ts  RecentlyPlayed.test.ts  RecentlyPlayed.ts  Search.test.ts  Search.ts
atolla/src/transports/: Cancelable.test.ts  Cancelable.ts  Errors.ts  JellyfinMappers.test.ts  JellyfinMappers.ts  Live.test.ts  Live.ts  Mock.test.ts  Mock.ts  Model.ts  Offline.test.ts  Offline.ts  Transport.contract.test.ts  Transport.ts  model.test.ts  model.ts
atolla/src/ui/: NavBarContext.ts  haptics.ts
atolla/src/utils/: Async.test.ts  Async.ts  CancelableController.test.ts  CancelableController.ts  Date.test.ts  Date.ts  Errors.test.ts  Errors.ts  RedactUrl.test.ts  RedactUrl.ts  Time.test.ts  Time.ts  async.test.ts  async.ts  colorExtractor.ts  jpegColorParser.test.ts  jpegColorParser.ts
atolla/strings/: strings-en.json  strings-fr.json
atolla/test/components/: AppShell.spec.tsx  Button.spec.tsx  CacheClearModal.spec.tsx  CardContextMenu.spec.tsx  CardGrid.spec.tsx  CreatePlaylistFromQueueModal.spec.tsx  DetailHeader.spec.tsx  EmptyState.spec.tsx  ErrorBoundary.spec.tsx  FooterIcon.spec.tsx  FooterNav.spec.tsx  GenrePills.spec.tsx  LanguageSelectModal.spec.tsx  MixesSection.spec.tsx  Modal.spec.tsx  ModalActionButton.spec.tsx  NativeAudioPlayer.spec.tsx  NowPlayingBar.spec.tsx  NowPlayingSurface.spec.tsx  OverlayHost.spec.tsx  PlaybackProgressBar.spec.tsx  ProgressBarPlain.spec.tsx  ProgressBarWaveform.spec.tsx  PushDetail.spec.tsx  RefreshableScroll.spec.tsx  Spinner.spec.tsx  SyncStatusBanner.spec.tsx  Toast.spec.tsx  Toggle.spec.tsx  (+3 more)
atolla_dev/: BUILD.bazel
tools/palette-preview/: BUILD.bazel  run.ts
(+357 files in other folders)
