load("@valdi//bzl/valdi:valdi_application.bzl", "valdi_application")

package(default_visibility = ["//visibility:public"])

valdi_application(
    name = "atolla",
    android_app_manifest = "//atolla/native:android_manifest",
    android_package = "com.tx3stn.atolla",
    android_resource_files = ["//atolla/native:android_launcher_icons"],
    ios_bundle_id = "com.tx3stn.atolla",
    ios_families = ["iphone"],
    root_component_path = "App@atolla/src/App",
    title = "atolla",
    version = "0.0.1",
    deps = ["//atolla"],
)

filegroup(
    name = "app_sources",
    srcs = glob([
        "atolla/src/**/*.ts",
        "atolla/src/**/*.tsx",
    ]),
)

filegroup(
    name = "package_json",
    srcs = ["package.json"],
)

filegroup(
    name = "bun.lock",
    srcs = ["bun.lock"],
)

filegroup(
    name = "tsconfig_json",
    srcs = ["tsconfig.json"],
)
