load("@valdi//bzl/valdi:valdi_application.bzl", "valdi_application")
load("@rules_zig//zig:toolchain.bzl", "zig_target_toolchain")

package(default_visibility = ["//visibility:public"])

valdi_application(
    name = "atolla",
    android_app_manifest = "//atolla/native:android_manifest",
    android_package = "com.tx3stn.atolla",
    android_resource_files = ["//atolla/native:android_launcher_icons"],
    ios_bundle_id = "com.tx3stn.atolla",
    ios_app_icons = ["//atolla/native:ios_launcher_icons"],
    ios_families = ["iphone"],
    root_component_path = "App@atolla/src/App",
    title = "atolla",
    version = "0.0.23",
    deps = ["//atolla"],
)

zig_target_toolchain(
    name = "zig_target_android_arm64",
    target = "aarch64-linux-android",
)

toolchain(
    name = "zig_toolchain_android_arm64",
    target_compatible_with = [
        "@platforms//os:android",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":zig_target_android_arm64",
    toolchain_type = "@rules_zig//zig/target:toolchain_type",
)

zig_target_toolchain(
    name = "zig_target_ios_arm64",
    target = "aarch64-ios-simulator",
)

toolchain(
    name = "zig_toolchain_ios_arm64",
    target_compatible_with = [
        "@platforms//os:ios",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":zig_target_ios_arm64",
    toolchain_type = "@rules_zig//zig/target:toolchain_type",
)

filegroup(
    name = "app_sources",
    srcs = glob([
        "atolla/src/**/*.ts",
        "atolla/src/**/*.tsx",
    ]),
)

filegroup(
    name = "package_json",
    srcs = ["package.json"],
)

filegroup(
    name = "bun.lock",
    srcs = ["bun.lock"],
)

filegroup(
    name = "tsconfig_json",
    srcs = ["tsconfig.json"],
)
