load("@rules_zig//zig:toolchain.bzl", "zig_target_toolchain")
load("@valdi//bzl/valdi:valdi_application.bzl", "valdi_application")

package(default_visibility = ["//visibility:public"])

valdi_application(
    name = "atolla",
    android_app_manifest = "//atolla/native:android_manifest",
    android_package = "com.tx3stn.atolla",
    android_resource_files = ["//atolla/native:android_launcher_icons"],
    ios_app_icons = ["//atolla/native:ios_launcher_icons"],
    ios_bundle_id = "com.tx3stn.atolla",
    ios_families = ["iphone"],
    root_component_path = "App@atolla/src/App",
    title = "atolla",
    version = "0.4.1",
    deps = ["//atolla"],
)

# The local dev variant lives in its own package (//atolla_dev) because valdi_application
# emits a fixed-name libvaldi.so cc_binary that would collide with this one's.

zig_target_toolchain(
    name = "zig_target_android_arm64",
    target = "aarch64-linux-android",
)

toolchain(
    name = "zig_toolchain_android_arm64",
    target_compatible_with = [
        "@platforms//os:android",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":zig_target_android_arm64",
    toolchain_type = "@rules_zig//zig/target:toolchain_type",
)

zig_target_toolchain(
    name = "zig_target_ios_arm64",
    target = "aarch64-ios-simulator",
)

toolchain(
    name = "zig_toolchain_ios_arm64",
    target_compatible_with = [
        "@platforms//os:ios",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":zig_target_ios_arm64",
    toolchain_type = "@rules_zig//zig/target:toolchain_type",
)

filegroup(
    name = "app_sources",
    srcs = glob([
        "atolla/src/**/*.ts",
        "atolla/src/**/*.tsx",
    ]),
)

filegroup(
    name = "package_json",
    srcs = ["package.json"],
)

filegroup(
    name = "bun.lock",
    srcs = ["bun.lock"],
)

filegroup(
    name = "tsconfig_json",
    srcs = ["tsconfig.json"],
)

# Keeps the valdi~ repo planted in Bazel's execroot symlink forest. Bazel
# rebuilds that forest per invocation to hold only the current build's
# dependency closure; the native-only checks (zig / android / ios tests) don't
# reference the valdi module, so running them drops valdi~ and breaks editor +
# `tsc` type resolution (the projectsync-generated tsconfig paths point into
# bazel-<ws>/external/valdi~). The native check scripts build this anchor in the
# SAME bazel invocation so valdi~ stays present. @valdi//modules:valdi_base is a
# public source-only filegroup, so building this costs ~nothing.
filegroup(
    name = "valdi_editor_anchor",
    srcs = ["@valdi//modules:valdi_base"],
)
