load("@valdi//bzl/valdi:valdi_module.bzl", "valdi_module")

package(default_visibility = ["//visibility:public"])

valdi_module(
    name = "atolla",
    android_deps = ["//atolla/native:atolla_cache_image_loader_android"],
    ios_deps = ["//atolla/native:atolla_cache_image_loader_ios"],
    srcs = glob(
        [
            "src/**/*.ts",
            "src/**/*.d.ts",
            "src/**/*.tsx",
            "src/**/*.json",
            "test/**/*.ts",
            "test/**/*.tsx",
        ],
        exclude = [
            "src/**/*.test.ts",
            "src/**/*.test.tsx",
        ],
    ),
    exclude_patterns = [
        ".*\\.test\\.ts$",
        ".*\\.test\\.tsx$",
    ],
    res = glob([
        "res/**/*.jpeg",
        "res/**/*.jpg",
        "res/**/*.png",
        "res/**/*.svg",
        "res/**/*.webp",
    ]),
    test_target_name = "test",
    visibility = ["//visibility:public"],
    deps = [
        "@valdi//src/valdi_modules/src/valdi/file_system",
        "@valdi//src/valdi_modules/src/valdi/foundation",
        "@valdi//src/valdi_modules/src/valdi/persistence",
        "@valdi//src/valdi_modules/src/valdi/valdi_core",
        "@valdi//src/valdi_modules/src/valdi/valdi_http",
        "@valdi//src/valdi_modules/src/valdi/valdi_navigation",
        "@valdi//src/valdi_modules/src/valdi/valdi_test",
        "@valdi//src/valdi_modules/src/valdi/valdi_tsx",
        "@valdi//src/valdi_modules/src/valdi/worker",
    ],
)

alias(
    name = "app_kt",
    actual = ":atolla_kt",
    visibility = ["//visibility:public"],
)

alias(
    name = "app_native",
    actual = ":atolla_native",
    visibility = ["//visibility:public"],
)
