load("@build_bazel_rules_swift//swift:swift.bzl", "swift_interop_hint", "swift_library")
load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "android_launcher_icons",
    srcs = glob([
        "android/res/drawable/*.xml",
        "android/res/drawable-*/ic_notification.png",
        "android/res/mipmap-*/ic_launcher.png",
        "android/res/values/*.xml",
        "android/res/values-v31/*.xml",
        "android/res/xml/*.xml",
    ]),
)

filegroup(
    name = "android_manifest",
    srcs = ["android/AndroidManifest.xml"],
)

swift_interop_hint(
    name = "palette_ios_bridge_swift_interop",
    module_map = "ios/palette_ios_bridge.modulemap",
    module_name = "palette_ios_bridge",
)

objc_library(
    name = "palette_ios_bridge",
    srcs = ["ios/palette_ios_bridge.m"],
    hdrs = ["ios/palette_ios_bridge.h"],
    aspect_hints = [":palette_ios_bridge_swift_interop"],
    deps = ["//atolla/native/zig:palette_algorithm"],
    sdk_frameworks = ["CoreGraphics"],
)

swift_library(
    name = "atolla_cache_image_loader_ios",
    srcs = ["ios/AtollaCacheImageLoader.swift"],
    deps = [":palette_ios_bridge"],
)

objc_library(
    name = "atolla_track_playback_module_factory_ios",
    srcs = ["ios/AtollaTrackPlaybackNativeModuleFactory.m"],
    copts = ["-I."],
    deps = ["//atolla:atolla_api_objc"],
    sdk_frameworks = [
        "AVFoundation",
        "MediaPlayer",
    ],
)

kt_android_library(
    name = "atolla_cache_image_loader_android",
    srcs = [
        "android/AtollaCacheImageLoader.kt",
        "android/AtollaImageLoaderAutoBootstrap.kt",
        "android/AtollaImageLoaderBootstrapModuleFactory.kt",
        "android/AtollaImageLoaderRegistration.kt",
        "android/AtollaPlaybackService.kt",
        "android/AtollaTrackValdiVideoPlayer.kt",
        "android/AtollaTrackPlaybackNativeModuleFactory.kt",
    ],
    assets = [
        "android/assets/valdi_native_modules/atolla.native.android.AtollaImageLoaderBootstrapModuleFactory",
        "android/assets/valdi_native_modules/atolla.native.android.AtollaTrackPlaybackNativeModuleFactory",
    ],
    assets_dir = "android/assets",
    custom_package = "atolla.native.android",
    deps = [
        "//atolla:atolla_api_kt",
        "@media3_mvn//:androidx_media3_media3_exoplayer",
        "@android_mvn//:com_squareup_okhttp3_okhttp",
        "@valdi//valdi:valdi_java",
    ],
)
