load("@build_bazel_rules_swift//swift:swift.bzl", "swift_interop_hint", "swift_library")
load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "ios_launcher_icons",
    srcs = glob(["ios/Assets.xcassets/AppIcon.*/**"]),
)

filegroup(
    name = "android_launcher_icons",
    srcs = glob([
        "android/res/drawable/*.xml",
        "android/res/drawable-*/ic_notification.png",
        "android/res/mipmap-*/ic_launcher.png",
        "android/res/values/*.xml",
        "android/res/values-v31/*.xml",
        "android/res/xml/*.xml",
    ]),
)

config_setting(
    name = "prod_build",
    values = {"define": "build_mode=prod"},
)

filegroup(
    name = "android_manifest",
    srcs = select({
        ":prod_build": ["android/AndroidManifest.prod.xml"],
        "//conditions:default": ["android/AndroidManifest.dev.xml"],
    }),
)

swift_interop_hint(
    name = "palette_ios_bridge_swift_interop",
    module_map = "ios/palette_ios_bridge.modulemap",
    module_name = "palette_ios_bridge",
)

objc_library(
    name = "palette_ios_bridge",
    srcs = ["ios/palette_ios_bridge.m"],
    hdrs = ["ios/palette_ios_bridge.h"],
    aspect_hints = [":palette_ios_bridge_swift_interop"],
    deps = ["//atolla/native/zig:palette_algorithm"],
    sdk_frameworks = ["CoreGraphics", "UIKit"],
)

swift_interop_hint(
    name = "blur_ios_bridge_swift_interop",
    module_map = "ios/blur_ios_bridge.modulemap",
    module_name = "blur_ios_bridge",
)

objc_library(
    name = "blur_ios_bridge",
    srcs = ["ios/blur_ios_bridge.m"],
    hdrs = ["ios/blur_ios_bridge.h"],
    aspect_hints = [":blur_ios_bridge_swift_interop"],
    deps = ["//atolla/native/zig:blur_algorithm"],
    sdk_frameworks = ["CoreGraphics", "UIKit"],
)

swift_interop_hint(
    name = "waveform_ios_bridge_swift_interop",
    module_map = "ios/waveform_ios_bridge.modulemap",
    module_name = "waveform_ios_bridge",
)

objc_library(
    name = "waveform_ios_bridge",
    srcs = ["ios/waveform_ios_bridge.m"],
    hdrs = ["ios/waveform_ios_bridge.h"],
    aspect_hints = [":waveform_ios_bridge_swift_interop"],
    deps = ["//atolla/native/zig:waveform_algorithm"],
    sdk_frameworks = ["AVFoundation", "CoreMedia"],
)


objc_library(
    name = "atolla_debug_logger_module_factory_ios",
    srcs = ["ios/AtollaDebugLoggerNativeModuleFactory.m"],
    copts = ["-I."],
    deps = [
        "//atolla:atolla_api_objc",
    ],
)

objc_library(
    name = "atolla_haptics_bootstrap_module_factory_ios",
    srcs = ["ios/AtollaHapticsBootstrapModuleFactory.m"],
    copts = ["-I."],
    deps = [
        "//atolla:atolla_api_objc",
    ],
    sdk_frameworks = ["UIKit"],
)

objc_library(
    name = "atolla_track_playback_module_factory_ios",
    srcs = ["ios/AtollaTrackPlaybackNativeModuleFactory.m"],
    copts = ["-I."],
    deps = [
        "//atolla:atolla_api_objc",
    ],
    sdk_frameworks = [
        "AVFoundation",
        "MediaPlayer",
    ],
)

objc_library(
    name = "atolla_waveform_module_factory_ios",
    srcs = ["ios/AtollaWaveformNativeModuleFactory.m"],
    copts = ["-I."],
    deps = [
        "//atolla:atolla_api_objc",
        ":waveform_ios_bridge",
    ],
)

objc_library(
    name = "atolla_image_loader_bootstrap_module_factory_ios",
    srcs = ["ios/AtollaImageLoaderBootstrapModuleFactory.m"],
    copts = ["-I."],
    deps = [
        "//atolla:atolla_api_objc",
        ":blur_ios_bridge",
        ":palette_ios_bridge",
    ],
)

objc_library(
    name = "atolla_swipe_back_fix_ios",
    srcs = ["ios/AtollaSwipeBackFix.m"],
    sdk_frameworks = ["UIKit"],
)

kt_android_library(
    name = "atolla_cache_image_loader_android",
    srcs = [
        "android/AtollaCacheImageLoader.kt",
        "android/AtollaDebugLoggerNativeModuleFactory.kt",
        "android/AtollaHapticsBootstrap.kt",
        "android/AtollaHapticsBootstrapModuleFactory.kt",
        "android/AtollaPlaybackGuards.kt",
        "android/AtollaImageLoaderAutoBootstrap.kt",
        "android/AtollaImageLoaderBootstrapModuleFactory.kt",
        "android/AtollaImageLoaderRegistration.kt",
        "android/AtollaPlaybackService.kt",
        "android/AtollaStatusBarNativeModuleFactory.kt",
        "android/AtollaTrackPlaybackNativeModuleFactory.kt",
        "android/AtollaWaveformNativeModuleFactory.kt",
        "android/AtollaWaveformWorker.kt",
    ],
    assets = [
        "android/assets/valdi_native_modules/atolla.native.android.AtollaDebugLoggerNativeModuleFactory",
        "android/assets/valdi_native_modules/atolla.native.android.AtollaHapticsBootstrapModuleFactory",
        "android/assets/valdi_native_modules/atolla.native.android.AtollaImageLoaderBootstrapModuleFactory",
        "android/assets/valdi_native_modules/atolla.native.android.AtollaStatusBarNativeModuleFactory",
        "android/assets/valdi_native_modules/atolla.native.android.AtollaTrackPlaybackNativeModuleFactory",
        "android/assets/valdi_native_modules/atolla.native.android.AtollaWaveformNativeModuleFactory",
    ],
    assets_dir = "android/assets",
    custom_package = "atolla.native.android",
    deps = [
        "//atolla:atolla_api_kt",
        "@media3_mvn//:androidx_core_core",
        "@media3_mvn//:androidx_media3_media3_exoplayer",
        "@android_mvn//:com_squareup_okhttp3_okhttp",
        "@valdi//valdi:valdi_java",
    ],
)

kt_jvm_library(
    name = "atolla_playback_guards",
    srcs = ["android/AtollaPlaybackGuards.kt"],
)
