load("@build_bazel_rules_swift//swift:swift.bzl", "swift_interop_hint")
load("@rules_cc//cc:objc_library.bzl", "objc_library")
load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "ios_launcher_icons",
    srcs = glob(["ios/Assets.xcassets/AppIcon.*/**"]),
)

# Dev-variant app icon (//:atolla_dev) — its own asset catalog because the set must
# keep the "AppIcon" name Xcode looks up by default, so it can't share Assets.xcassets.
filegroup(
    name = "ios_launcher_icons_dev",
    srcs = glob(["ios/Assets-dev.xcassets/AppIcon.*/**"]),
)

# Everything the launcher-icon set contributes except the launcher raster itself, so
# the prod and dev apps can share it and differ only in which ic_launcher* they bundle.
filegroup(
    name = "android_res_common",
    srcs = glob([
        "android/res/drawable/*.xml",
        "android/res/drawable-*/ic_notification.png",
        "android/res/values/*.xml",
        "android/res/values-v31/*.xml",
        "android/res/xml/*.xml",
    ]),
)

filegroup(
    name = "android_launcher_icons",
    srcs = [":android_res_common"] + glob(["android/res/mipmap-*/ic_launcher.png"]),
)

# Dev variant keeps its launcher resources in the same res/ root under distinct names
# (ic_launcher_dev*) so no resource-root merge is needed; the dev manifest points at
# @mipmap/ic_launcher_dev. Bundles the full adaptive-icon set (anydpi xml + foreground +
# monochrome + the night background colour) so it renders as a themed, full-bleed icon
# rather than a transparent raster the launcher plates onto a white square.
filegroup(
    name = "android_launcher_icons_dev",
    srcs = [":android_res_common"] + glob([
        "android/res/mipmap-*/ic_launcher_dev.png",
        "android/res/mipmap-anydpi-*/ic_launcher_dev.xml",
    ]) + [
        "android/res/drawable/ic_launcher_dev_foreground.png",
        "android/res/drawable/ic_launcher_dev_monochrome.png",
        "android/res/values-night/colors.xml",
    ],
)

# The released app (//:atolla, com.tx3stn.atolla).
filegroup(
    name = "android_manifest",
    srcs = ["android/AndroidManifest.prod.xml"],
)

# The local dev app (//:atolla_dev, com.tx3stn.atolla.dev) — same app under a distinct
# application id + "atolla dev" label + dev launcher icon so it installs alongside the
# released build. profileable stays on for local debugging.
filegroup(
    name = "android_manifest_dev",
    srcs = ["android/AndroidManifest.dev.xml"],
)

objc_library(
    name = "atolla_bounded_image_decode_ios",
    srcs = ["ios/AtollaBoundedImageDecode.m"],
    hdrs = ["ios/AtollaBoundedImageDecode.h"],
    copts = ["-I."],
    sdk_frameworks = [
        "CoreGraphics",
        "ImageIO",
    ],
)

swift_interop_hint(
    name = "palette_ios_bridge_swift_interop",
    module_map = "ios/palette_ios_bridge.modulemap",
    module_name = "palette_ios_bridge",
)

objc_library(
    name = "palette_ios_bridge",
    srcs = ["ios/palette_ios_bridge.m"],
    hdrs = ["ios/palette_ios_bridge.h"],
    aspect_hints = [":palette_ios_bridge_swift_interop"],
    copts = ["-I."],
    sdk_frameworks = [
        "CoreGraphics",
        "UIKit",
    ],
    deps = [
        ":atolla_bounded_image_decode_ios",
        "//atolla/native/zig:palette_algorithm",
    ],
)

swift_interop_hint(
    name = "blur_ios_bridge_swift_interop",
    module_map = "ios/blur_ios_bridge.modulemap",
    module_name = "blur_ios_bridge",
)

objc_library(
    name = "blur_ios_bridge",
    srcs = ["ios/blur_ios_bridge.m"],
    hdrs = ["ios/blur_ios_bridge.h"],
    aspect_hints = [":blur_ios_bridge_swift_interop"],
    copts = ["-I."],
    sdk_frameworks = [
        "CoreGraphics",
        "UIKit",
    ],
    deps = [
        ":atolla_bounded_image_decode_ios",
        "//atolla/native/zig:blur_algorithm",
    ],
)

swift_interop_hint(
    name = "waveform_ios_bridge_swift_interop",
    module_map = "ios/waveform_ios_bridge.modulemap",
    module_name = "waveform_ios_bridge",
)

objc_library(
    name = "waveform_ios_bridge",
    srcs = ["ios/waveform_ios_bridge.m"],
    hdrs = ["ios/waveform_ios_bridge.h"],
    aspect_hints = [":waveform_ios_bridge_swift_interop"],
    sdk_frameworks = [
        "AVFoundation",
        "CoreMedia",
    ],
    deps = ["//atolla/native/zig:waveform_algorithm"],
)

objc_library(
    name = "atolla_logger_module_factory_ios",
    srcs = ["ios/AtollaLoggerNativeModuleFactory.m"],
    copts = ["-I."],
    deps = [
        "//atolla:atolla_api_objc",
    ],
)

objc_library(
    name = "atolla_haptics_bootstrap_module_factory_ios",
    srcs = ["ios/AtollaHapticsBootstrapModuleFactory.m"],
    copts = ["-I."],
    sdk_frameworks = ["UIKit"],
    deps = [
        "//atolla:atolla_api_objc",
    ],
)

objc_library(
    name = "atolla_overlay_host_bootstrap_module_factory_ios",
    srcs = [
        "ios/AtollaOverlayHost.mm",
        "ios/AtollaOverlayHostBootstrapModuleFactory.m",
    ],
    hdrs = ["ios/AtollaOverlayHost.h"],
    copts = ["-I."],
    sdk_frameworks = ["UIKit"],
    deps = [
        "//atolla:atolla_api_objc",
    ],
)

objc_library(
    name = "atolla_track_playback_module_factory_ios",
    srcs = ["ios/AtollaTrackPlaybackNativeModuleFactory.m"],
    copts = ["-I."],
    sdk_frameworks = [
        "AVFoundation",
        "MediaPlayer",
    ],
    deps = [
        ":atolla_auth_redirect_guard_ios",
        ":atolla_playback_guards_ios",
        "//atolla:atolla_api_objc",
    ],
)

objc_library(
    name = "atolla_waveform_module_factory_ios",
    srcs = ["ios/AtollaWaveformNativeModuleFactory.m"],
    copts = ["-I."],
    deps = [
        ":waveform_ios_bridge",
        "//atolla:atolla_api_objc",
    ],
)

objc_library(
    name = "atolla_image_loader_bootstrap_module_factory_ios",
    srcs = ["ios/AtollaImageLoaderBootstrapModuleFactory.m"],
    copts = ["-I."],
    deps = [
        ":atolla_auth_redirect_guard_ios",
        ":atolla_disk_cache_stats_ios",
        ":atolla_image_fallback_ios",
        ":blur_ios_bridge",
        ":palette_ios_bridge",
        "//atolla:atolla_api_objc",
    ],
)

objc_library(
    name = "atolla_swipe_back_fix_ios",
    srcs = ["ios/AtollaSwipeBackFix.m"],
    sdk_frameworks = ["UIKit"],
)

objc_library(
    name = "atolla_floating_view_ios",
    srcs = ["ios/AtollaFloatingView.mm"],
    hdrs = ["ios/AtollaFloatingView.h"],
    copts = ["-I."],
    sdk_frameworks = ["UIKit"],
    deps = [
        "//atolla:atolla_api_objc",
    ],
    # The class is only ever referenced by name (NSClassFromString, via <custom-view
    # iosClass=...>), so force-link it to keep the linker from dead-stripping it.
    alwayslink = True,
)

# Pure, framework-free logic extracted from the iOS module factories so it can be unit tested.
objc_library(
    name = "atolla_image_fallback_ios",
    srcs = ["ios/AtollaImageFallback.m"],
    hdrs = ["ios/AtollaImageFallback.h"],
    copts = ["-I."],
)

objc_library(
    name = "atolla_playback_guards_ios",
    srcs = ["ios/AtollaPlaybackGuards.m"],
    hdrs = ["ios/AtollaPlaybackGuards.h"],
    copts = ["-I."],
)

objc_library(
    name = "atolla_auth_redirect_guard_ios",
    srcs = ["ios/AtollaAuthRedirectGuard.m"],
    hdrs = ["ios/AtollaAuthRedirectGuard.h"],
    copts = ["-I."],
)

objc_library(
    name = "atolla_disk_cache_stats_ios",
    srcs = ["ios/AtollaDiskCacheStats.m"],
    hdrs = ["ios/AtollaDiskCacheStats.h"],
    copts = ["-I."],
)

kt_android_library(
    name = "atolla_cache_image_loader_android",
    srcs = [
        "android/AtollaCacheImageLoader.kt",
        "android/AtollaLoggerNativeModuleFactory.kt",
        "android/AtollaDiskCacheStats.kt",
        "android/AtollaHapticsBootstrap.kt",
        "android/AtollaHapticsBootstrapModuleFactory.kt",
        "android/AtollaImageFallback.kt",
        "android/AtollaImageLoaderAutoBootstrap.kt",
        "android/AtollaImageLoaderBootstrapModuleFactory.kt",
        "android/AtollaImageLoaderRegistration.kt",
        "android/AtollaPlaybackGuards.kt",
        "android/AtollaPlaybackService.kt",
        "android/AtollaStatusBarNativeModuleFactory.kt",
        "android/AtollaTrackPlaybackNativeModuleFactory.kt",
        "android/AtollaWaveformNativeModuleFactory.kt",
        "android/AtollaWaveformWorker.kt",
    ],
    assets = [
        "android/assets/valdi_native_modules/atolla.native.android.AtollaLoggerNativeModuleFactory",
        "android/assets/valdi_native_modules/atolla.native.android.AtollaHapticsBootstrapModuleFactory",
        "android/assets/valdi_native_modules/atolla.native.android.AtollaImageLoaderBootstrapModuleFactory",
        "android/assets/valdi_native_modules/atolla.native.android.AtollaStatusBarNativeModuleFactory",
        "android/assets/valdi_native_modules/atolla.native.android.AtollaTrackPlaybackNativeModuleFactory",
        "android/assets/valdi_native_modules/atolla.native.android.AtollaWaveformNativeModuleFactory",
    ],
    assets_dir = "android/assets",
    custom_package = "atolla.native.android",
    deps = [
        "//atolla:atolla_api_kt",
        "@android_mvn//:androidx_core_core",
        "@android_mvn//:com_squareup_okhttp3_okhttp",
        "@media3_mvn//:androidx_media3_media3_exoplayer",
        "@valdi//valdi:valdi_java",
    ],
)

kt_jvm_library(
    name = "atolla_playback_guards",
    srcs = ["android/AtollaPlaybackGuards.kt"],
)

kt_jvm_library(
    name = "atolla_image_fallback",
    srcs = ["android/AtollaImageFallback.kt"],
)

kt_jvm_library(
    name = "atolla_disk_cache_stats",
    srcs = ["android/AtollaDiskCacheStats.kt"],
)
